--- a/src/app/cafe/cafe-list/cafe-list.component.html
+++ b/src/app/cafe/cafe-list/cafe-list.component.html
@@ -1,8 +1,5 @@
-<h1>cafe-list works!</h1>
-
-<div class="container">
+<div>
   <table class="table table-striped">
-    <caption>Contact us: +57 3102105253 - info@elaromamagico.co - @elaromamagico</caption>
     <thead class="thead-dark">
       <tr>
         <th scope="col">#</th>
@@ -13,11 +10,14 @@
     </thead>
     <tbody>
       <tr *ngFor="let cafe of listaCafe">
-        <td>{{ cafe.id }}</td>
+        <td class="fontBold">{{ cafe.id }}</td>
         <td>{{ cafe.nombre }}</td>
         <td>{{ cafe.tipo }}</td>
         <td>{{ cafe.region }}</td>
       </tr>
     </tbody>
+    <strong>Total café de origen: {{ cafeOrigen }}</strong>
+    <br>
+    <strong>Total café blend: {{ cafeBlend }}</strong>
   </table>
 </div>
